# aoc

./: .gitignore  README.md
2024/rust/: Cargo.toml  justfile
2024/rust/aoc-client/src/: lib.rs
2024/rust/bench-all/: Cargo.toml  build.rs
2024/rust/bench-all/benches/: bench.rs
2024/rust/bench-all/src/: lib.rs
2024/rust/day-1/: Cargo.toml
2024/rust/day-1/benches/: part_a.rs  part_b.rs
2024/rust/day-1/src/: lib.rs
2024/rust/day-10/: Cargo.toml
2024/rust/day-10/src/: lib.rs  main.rs
2024/rust/day-11/: Cargo.toml
2024/rust/day-11/benches/: part_a.rs  part_b.rs
2024/rust/day-11/src/: lib.rs  main.rs
2024/rust/day-12/: Cargo.toml
2024/rust/day-12/benches/: part_a.rs  part_b.rs
2024/rust/day-12/src/: lib.rs  main.rs
2024/rust/day-13/: Cargo.toml
2024/rust/day-13/benches/: part_a.rs  part_b.rs
2024/rust/day-13/src/: lib.rs  main.rs
2024/rust/day-14/: Cargo.toml
2024/rust/day-14/benches/: part_a.rs  part_b.rs
2024/rust/day-14/src/: lib.rs  main.rs
2024/rust/day-15/: Cargo.toml
2024/rust/day-15/benches/: part_a.rs  part_b.rs
2024/rust/day-15/src/: lib.rs  main.rs
2024/rust/day-16/: Cargo.toml
2024/rust/day-16/benches/: part_a.rs  part_b.rs
2024/rust/day-16/src/: lib.rs  main.rs
2024/rust/day-17/: Cargo.toml
2024/rust/day-17/benches/: part_a.rs  part_b.rs
2024/rust/day-17/src/: lib.rs  main.rs
2024/rust/day-18/: Cargo.toml
2024/rust/day-18/benches/: part_a.rs  part_b.rs
2024/rust/day-18/src/: lib.rs  main.rs
2024/rust/day-2/: Cargo.toml
2024/rust/day-2/benches/: part_a.rs  part_b.rs
2024/rust/day-2/src/: lib.rs
2024/rust/day-20/: Cargo.toml
2024/rust/day-20/benches/: part_a.rs  part_b.rs
2024/rust/day-20/src/: lib.rs  main.rs
2024/rust/day-22/: Cargo.toml
2024/rust/day-22/benches/: part_a.rs  part_b.rs
2024/rust/day-22/src/: lib.rs  main.rs
2024/rust/day-23/: Cargo.toml
2024/rust/day-23/benches/: part_a.rs  part_b.rs
2024/rust/day-23/src/: lib.rs  main.rs
2024/rust/day-24/: Cargo.toml
2024/rust/day-24/benches/: part_a.rs  part_b.rs
2024/rust/day-24/src/: lib.rs  main.rs
2024/rust/day-25/: Cargo.toml
2024/rust/day-25/benches/: part_a.rs  part_b.rs
2024/rust/day-25/src/: lib.rs  main.rs
2024/rust/day-3/: Cargo.toml
2024/rust/day-3/benches/: part_a.rs  part_b.rs
2024/rust/day-3/src/: lib.rs
2024/rust/day-4/: Cargo.toml
2024/rust/day-4/benches/: part_a.rs  part_b.rs
2024/rust/day-4/src/: lib.rs
2024/rust/day-5/: Cargo.toml
2024/rust/day-5/benches/: part_a.rs  part_b.rs
2024/rust/day-5/src/: lib.rs
2024/rust/day-6/: Cargo.toml
2024/rust/day-6/benches/: part_a.rs  part_b.rs
2024/rust/day-6/src/: lib.rs
2024/rust/day-7/: Cargo.toml
2024/rust/day-7/benches/: part_a.rs  part_b.rs
2024/rust/day-7/src/: lib.rs
2024/rust/day-8/: Cargo.toml
2024/rust/day-8/src/: lib.rs
2024/rust/day-9/: Cargo.toml
2024/rust/day-9/src/: lib.rs  main.rs
2024/rust/grid/: Cargo.toml
2024/rust/grid/src/: lib.rs
2024/rust/grid/src/grid/: builder.rs  mod.rs
day_template/rust/: Cargo.toml
day_template/rust/benches/: part_a.rs  part_b.rs
day_template/rust/src/: lib.rs  main.rs
