[workspace]
resolver = "2"
members = ["aoc-client", "day-*"]
default-members = ["day-*"]

[workspace.dependencies]
anyhow = "1.0.93"
aoc-client = { path = "aoc-client" }
clap = { version = "4.5.21", features = ["derive"] }
criterion = { version = "0.5", default-features = false, features = [
  "cargo_bench_support",
  "rayon",
] }
tokio = { version = "1.41.1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
