[workspace]
resolver = "2"
members = ["aoc-client", "day-*"]
default-members = ["day-*"]

[workspace.dependencies]
anyhow = "1.0.93"
aoc-client = { path = "aoc-client" }
clap = { version = "4.5.21", features = ["derive"] }
criterion = { version = "0.5", default-features = false, features = [
  "cargo_bench_support",
  "rayon",
] }
regex = "1.11.1"
tokio = { version = "1.41.1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-test = "0.2.5"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_possible_wrap = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
