[workspace]
resolver = "2"
members = ["aoc-client", "math", "day-*", "bench-all"]
default-members = ["day-*"]

[workspace.dependencies]
aoc-client = { path = "aoc-client" }
math = { path = "math" }
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
count-digits = "0.5.1"
criterion = { version = "0.5", default-features = false, features = [
  "cargo_bench_support",
  "rayon",
] }
itertools = "0.13.0"
glam = "0.29.2"
rayon = "1.10.0"
regex = "1.11.1"
tokio = { version = "1.41.1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-test = "0.2.5"
test-case = "3.3.1"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_possible_wrap = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
